# otus_basic_hm_five

./: CMakeLists.txt  README.md  istatistics.cpp  mean.cpp  min.cpp
include/: istatistics.hpp  manager.hpp  max.hpp  mean.hpp  min.hpp  parsing.hpp  percentile90.hpp  percentile95.hpp  std.hpp
src/: main.cpp  manager.cpp  max.cpp  mean.cpp  min.cpp  parsing.cpp  percentile90.cpp  percentile95.cpp  std.cpp
